--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
    box-sizing: border-box; 
    padding: 0;
    margin: 0;
+   scroll-behavior: smooth;
 
 }
 
@@ -20,12 +21,27 @@ body{
          );
     margin: 0;
     min-height: 100vh;
+    scroll-behavior: smooth;
+   
   
+}
+.title{
+font-size: 30px;
+display: block;
+flex-direction: column;
+float:right;
+writing-mode: vertical-rl;
+margin-right: -45px;
+color:white
 }
 
 main{
     width: 75%;
     
+}
+.vl {
+    border-right: thick solid #fff;
+    margin-right: -140px;
 }
 
 h1{
@@ -43,28 +59,35 @@ nav ul {
     text-align: right;
     list-style: none;
     justify-content: flex-end;
-    gap: 20px;
+    gap: 40px;
     flex-direction: row;
     display: flex;
     color: pink;
     margin: 40px 60px 40px 40px;
     text-decoration: none;
+    position: sticky;
+    
 
 }
+
 a:link {
     color: pink;
+    text-decoration: none;
   }
   
   a:visited {
-    background-color: pink;
+    color: pink;
+    text-decoration: none;
   }
   
   a:hover {
     background-color: pink;
+    text-decoration: none;
   }
   
   a:active {
-    background-color: pink;
+    color: pink;
+    text-decoration: none;
   } 
 
 h2 {
@@ -74,29 +97,63 @@ h2 {
 }
 
 .profile-pic {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     border-radius: 50%;
     margin: 20px;
-    
-
 }
 
 .card {
 margin-left: 20px;
 position:fixed;
 
-
 }
 
 .description {
 margin-left: 400px;
 margin-top: 60px;
-margin-right: -100px;
+margin-right: 50px;
 font-size: 20px;
 line-height: 1.3;
+align-content: center;
+display: block;
+overflow-wrap: break-word;
+color: #fff;
+}
+
+section ul {
+    text-align: center;
+    list-style: none;
+    justify-content: flex-end;
+    gap: 20px;
+    flex-direction: row;
+    display: flex;
+    color: rgb(0, 0, 0);
+    margin: 40px 60px 40px 40px;
+    text-decoration: none;
+    
+
+
+}
+
+.socials{
+    display: flex;
+    flex-direction: row;
+    -webkit-box-align: center;
+    align-items: center;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
 }
 
 footer {
     text-align: center;
+}
+.work-image {
+    width: 800px;
+    height: 350px;
+    margin-left: 400px;
+    margin-top: 60px;
+    margin-right: -100px;
+    border: 2px;
 }
