--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 body{
     font-family: var(--font);
     background-image: linear-gradient(
-          rgb(30, 30, 31) 0%,
+          rgb(31, 31, 30) 0%,
         rgb(255, 192, 203) 100%
          );
     margin: 0;
@@ -131,8 +131,6 @@ section ul {
     color: rgb(0, 0, 0);
     margin: 40px 60px 40px 40px;
     text-decoration: none;
-    
-
 
 }
 
@@ -154,6 +152,27 @@ footer {
     height: 350px;
     margin-left: 400px;
     margin-top: 60px;
-    margin-right: -100px;
-    border: 2px;
+    opacity: 0.5;
+    border: 5px solid rgb(255, 192, 55);
 }
+
+.work-image:hover {
+    opacity: 1;
+}
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+  
+  /* Bottom left text */
+  .bottom-left {
+    position: absolute;
+    bottom: 35px;
+    left: 450px;
+    font-size: 25px;
+    line-height: 1.3;
+    background-color: rgb(255, 192, 55);
+    padding: 10px;
+    
+  }
