--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    scroll-behavior: smooth;
 }
 
 :root {
@@ -12,27 +11,18 @@
 body {
     font-family: var(--font);
     background-image: linear-gradient(to top, #ffecb9, #ffdbb1, #fdc6b1, #fdbcc4, #fcb9d6, #fabde1, #f8b8ec, #f3bdfa, #e6bcfc, #dbc2f8, #cdbcf8, #bab6f8);
-    margin: 0;
-    min-height: 100vh;
     scroll-behavior: smooth;
 }
 
-main {
-    width: 75%;
-}
-
 nav ul {
-    text-align: center;
-    list-style: none;
-    justify-content: flex-end;
-    gap: 40px;
-    flex-direction: row;
     display: flex;
+    justify-content: flex-end;
+    list-style: none;
+    font-size: 25px;
+    gap: 40px;
     color: rgb(255, 255, 255);
     padding: 30px 8.33%;
     text-decoration: none;
-    position: sticky;
-    font-size: 25px;
     font-family: 'Courier New', Courier, monospace;
 }
 
@@ -55,119 +45,74 @@ a:active {
     text-decoration: none;
 }
 
+main {
+    width: 75%;
+}
+
 .card {
     margin-left: 20px;
     position: fixed;
 }
 
 h1 {
-    text-align: left;
     color: rgb(255, 255, 255);
-    display: flex;
-    gap: 20px;
     margin-top: -10px;
     margin-left: 25px;
     font-size: 200%;
     font-family: 'Courier New', Courier, monospace;
 }
 
-.profile-pic {
+aside img {
     width: 250px;
-    height: 250px;
     border-radius: 50%;
     margin: 20px;
 }
 
+.vl {
+    border-right: thick solid #fff;
+    margin-right: -140px;
+}
+
 h2 {
-    text-align: right;
-    margin-right: -200px;
-    margin-top: 60px
+    margin-top: 20px;
+    margin-right: -45px;
+    font-size: 30px;
+    float: right;
+    writing-mode: vertical-rl;
+    color: white;
 }
 
-div .transbox {
-    margin: 30px 30px 30px 30px;
-    background-color: #ffffff;
-    border: 1px solid black;
-    opacity: 0.6;
-}
-
-.description {
+#description {
     margin-left: 395px;
     margin-top: 60px;
     margin-right: 10px;
     font-size: 20px;
     line-height: 1.3;
-    align-content: center;
-    display: block;
-    overflow-wrap: break-word;
     color: #fff;
     background-color: rgb(0, 0, 0);
     opacity: 0.5;
     padding: 10px;
 }
 
-.description:hover {
+#description:hover {
     opacity: 1;
 }
 
-#work {
+#work-container {
     margin-left: 410px;
     margin-top: 100px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.image {
-    width: 400px;
-    height: 175px;
-    margin-top: 60px;
-    opacity: 0.6;
-    border: 5px solid rgb(255, 192, 55);
-    padding: 0px;
-    justify-content: space-between;
-}
-
-#work img:hover {
-    opacity: 1;
-    z-index: 2;
 }
 
 #refactor {
     width: 100%;
     border: 5px solid rgb(255, 192, 55);
     color: white;
-    display: flex;
-    flex-wrap: wrap;
+    position: relative;
 }
 
-.bottom-left-refactor {
-    position: absolute;
-    bottom: -120px;
-    font-size: 25px;
-    line-height: 1.3;
-    background-color: rgb(255, 192, 55);
-    padding: 10px;
-    z-index: 1;
-}
-
-.lg-img {
-    width: 100%;
-    height: auto;
-    opacity: 0.6;
-}
-
-#refactor:hover {
+#refactor img:hover {
     opacity: 1;
     z-index: 2;
-}
-
-.container {
-    position: relative;
-    text-align: center;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
 }
 
 
@@ -183,17 +128,40 @@ div .transbox {
     z-index: 1;
 }
 
-.title {
-    font-size: 30px;
-    float: right;
-    writing-mode: vertical-rl;
-    margin-right: -45px;
-    color: white;
+.lg-img {
+    width: 100%;
+    height: auto;
+    opacity: 0.6;
 }
 
-.vl {
-    border-right: thick solid #fff;
-    margin-right: -140px;
+#work-flex {
+    display: flex;
+    flex: wrap;
+    width: 50%;
+}
+
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+    flex-wrap: wrap;
+}
+
+#work-flex img {
+    width: 400px;
+    height: 175px;
+    margin-top: 60px;
+    opacity: 0.6;
+    border: 5px solid rgb(255, 192, 55);
+    padding: 0px;
+    justify-content: space-between;
+    display: flex;
+    flex: 1 1 auto;
+}
+
+#work-flex img:hover {
+    opacity: 1;
+    z-index: 2;
 }
 
 .socials {
@@ -202,7 +170,6 @@ div .transbox {
     list-style: none;
     justify-content: space-evenly;
     gap: 20px;
-    color: rgb(0, 0, 0);
     padding-top: 120px;
     padding-bottom: 80px;
     margin-top: 100px;
@@ -221,7 +188,7 @@ footer {
     #work img {
         flex: 25%;
     }
-    .lg-img {
+    {
         width: 400px;
         height: 175px;
     }
@@ -249,7 +216,7 @@ footer {
     #work img {
         flex: 25%;
     }
-    .lg-img {
+    {
         width: 400px;
         height: 175px;
     }
